--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pdfjs-dist": "^4.2.67",
     "react": "^18",
     "react-dom": "^18",
-    "react-pdf": "^8.0.0"
+    "react-pdf": "^8.0.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
