--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "pdfjs-dist": "^4.2.67",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-pdf": "^8.0.0",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
